<package format="2">
  <name>fl_msgs</name>
  <version>0.0.1</version>
  <description>
    all custom messages
  </description>
  <author>WengLihong</author>
  <maintainer email="wengge987@163.com">WengLihong</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
