<package format="2">
  <name>imu_pipeline_pkg</name>
  <version>0.0.1</version>
  <description>
    imu_pipeline_pkg
  </description>
  <author>wenglihong</author>
  <maintainer email="wengge987@163.com">wenglihong</maintainer>
  <license>BSD</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <depend>fl_msgs</depend>
	<depend>global_param</depend>

</package>
